Fix dropdown gap between Blogs and Blog 1

--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ body {
 .dropdown-hover,
 .home a {
   display: flex;
-  margin-top: 7px;
+  margin-top: 10px;
   padding: 40px;
   height: 25px;
   color: white;
